# energy-bench

./: .envrc  .gitignore  AGENTS.md  LICENSE  ReadMe.md  pyproject.toml  requirements.txt  test.csv
archived/: benchmarked_hourly_nuclear.csv  benchmarked_hourly_river.csv  benchmarked_hourly_storage.csv  benchmarked_hourly_water.csv  describe_the_benchmarking.mlr  kalman_river_hourly.csv  kalman_river_validation.csv  kalman_storage_hourly.csv  kalman_storage_validation.csv  kalman_water_hourly.csv  kalman_water_validation.csv  nuclear_compare.csv  river_compare.csv  river_plausibility.csv  validation_summary.csv  water_compare.csv  water_daily_balance  water_plausibility.csv  water_summary
docs/: RESTRUCTURING_ROADMAP.md  automated-bias-detection-guide.md  bias-comparison-guide.md  comparison-interface-redesign.md  consolidation-recommendations.md  entsoe-data-quality-issues.md  output-management.md  project-consolidation-analysis.md  scaling-validation-guide.md  temporal-disaggregation-methodology.md  understand_the_data.md  unified-comparison-examples.md
experiments/: kalman_demo.py
output/: nuclear_2016_2025_styled_recommendations.csv  nuclear_2016_2025_styled_summary.txt  nuclear_hourly_benchmarked_2025.csv  solar_2016_2025_styled_recommendations.csv  solar_2016_2025_styled_summary.txt  storage_2016_2025_styled_recommendations.csv  storage_2016_2025_styled_summary.txt  storage_hourly_benchmarked_2025.csv  test_river_2025_fixed_recommendations.csv  test_river_2025_fixed_summary.txt  test_river_2025_recommendations.csv  test_river_2025_summary.txt  (+6 more)
(+166 files in other folders)
