[project]
name = "energybench"  # nrg-bench
version = "0.2.0"
description = "Energy-Bench (nrgbnc) is a temporal disaggregation & benchmarking tool for (Swiss) electricity generation time series"
readme = "ReadMe.md"
requires-python = ">=3.14"
license = {text = "CC0-1.0"}
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "tempdisagg>=0.2.13",
    "cyclopts>=2.6",
    "matplotlib>=3.8",
    "filterpy>=1.4.4",
    "polars>=1.0",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "pyyaml>=6.0.3",
    # for read_csv
]

[project.scripts]
nrgbnc = "energybench.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
